--- a/mihomo/Makefile
+++ b/mihomo/Makefile
@@ -1,5 +1,8 @@
-VERSION:=1.18.7
-export VERSION
+REPO_ROOT ?= $(shell git rev-parse --show-toplevel)
+-include $(REPO_ROOT)/build.mk
+
+# https://github.com/MetaCubeX/mihomo/releases
+export VERSION:=1.19.0
 
 print:
 	docker buildx bake --print
