--- a/package.json
+++ b/package.json
@@ -1,31 +1,19 @@
 {
   "name": "dockerfiles",
   "version": "1.0.0",
-  "repository": "git@github.com:wenerme/dockerfiles.git",
-  "author": "wener",
-  "license": "MIT",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "buildit": "ts-node scripts/buildit.ts",
-    "format": "prettier --write scripts base"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "dependencies": {
-    "debug": "^4.1.1",
-    "dotenv": "^8.2.0",
-    "execa": "^4.0.0",
-    "globby": "^11.0.0",
-    "json5": "^2.1.2",
-    "lodash": "^4.17.15",
-    "shelljs": "^0.8.3"
-  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "module",
   "devDependencies": {
-    "@types/debug": "^4.1.5",
-    "@types/json5": "^0.0.30",
-    "@types/lodash": "^4.14.149",
-    "@types/node": "^13.9.5",
-    "@types/prettier": "^1.19.1",
-    "@types/shelljs": "^0.8.7",
-    "prettier": "^2.0.2",
-    "ts-node": "^8.8.1",
-    "typescript": "^3.8.3"
+    "semver": "^7.3.8",
+    "tsx": "^3.12.2",
+    "typescript": "^4.9.5",
+    "zx": "^7.1.1"
   }
 }
