--- a/caddy/Makefile
+++ b/caddy/Makefile
@@ -1,10 +1,10 @@
 REPO_ROOT ?= $(shell git rev-parse --show-toplevel)
 -include $(REPO_ROOT)/build.mk
 
-export ALPINE_RELEASE
-export VERSION=2.8.4
+export VERSION=2.9.1
 
 # check version
 # https://hub.docker.com/_/caddy
 # https://github.com/caddyserver/caddy/releases
 
+push:
