--- a/frp/Makefile
+++ b/frp/Makefile
@@ -1,16 +1,13 @@
+REPO_ROOT ?= $(shell git rev-parse --show-toplevel)
+-include $(REPO_ROOT)/build.mk
+
 PKG:=frp
 
 #https://github.com/fatedier/frp/releases
 #VERSION ?= $(shell docker run --rm -it wener/base sh -c 'apk update >/dev/null;apk policy $(PKG) | sed "2!d"  | sed -r "s/^\s*([0-9.]+).*/\1/"')
-VERSION=0.59.0
+VERSION=0.61.2
 export VERSION
 
 info:
-	docker buildx bake --print
-push:
-	docker buildx bake --push
 
-build-%:
-	docker buildx bake $*
-push-%:
-	docker buildx bake --push $*
+push:
