upgrade base version to 3.22

--- a/caddy/caddy/Dockerfile
+++ b/caddy/caddy/Dockerfile
@@ -4,9 +4,11 @@ ARG ALPINE_RELEASE=3.20.3
 FROM caddy:${VERSION}-builder AS builder
 
 # https://caddyserver.com/docs/modules/
-RUN xcaddy build \
+# fixme https://github.com/caddy-dns/powerdns/issues/4
+#    --with github.com/caddy-dns/powerdns \
+RUN --mount=type=cache,target=/root/go \
+    xcaddy build \
     --with github.com/caddy-dns/acmedns \
-    --with github.com/caddy-dns/powerdns \
     --with github.com/sagikazarmark/caddy-fs-s3
 
 FROM wener/base:${ALPINE_RELEASE}
