--- a/frp/frp/Dockerfile
+++ b/frp/frp/Dockerfile
@@ -3,13 +3,15 @@ FROM wener/base:${ALPINE_RELEASE}
 
 # https://github.com/fatedier/frp/releases
 ARG VERSION
+ARG TARGETARCH
 
 # inotify-tools help auto reload frp
+# TARGETARCH amd64
 RUN apk add --no-cache inotify-tools
 RUN test -n "$VERSION" \
     && apk add frp  \
     && echo Building ${VERSION} \
-    && curl -LO https://github.com/fatedier/frp/releases/download/v${VERSION}/frp_${VERSION}_linux_amd64.tar.gz \
-    && tar -zxvf frp_${VERSION}_linux_amd64.tar.gz \
-    && mv frp_${VERSION}_linux_amd64/frps frp_${VERSION}_linux_amd64/frpc /usr/bin/ \
-    && rm -rf frp_${VERSION}_linux_amd64*
+    && curl -LO https://github.com/fatedier/frp/releases/download/v${VERSION}/frp_${VERSION}_linux_${TARGETARCH}.tar.gz \
+    && tar -zxvf frp_${VERSION}_linux_${TARGETARCH}.tar.gz \
+    && mv frp_${VERSION}_linux_${TARGETARCH}/frps frp_${VERSION}_linux_${TARGETARCH}/frpc /usr/bin/ \
+    && rm -rf frp_${VERSION}_linux_${TARGETARCH}*
